# kzsh

./: .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  config.h.in  configure.ac  configure.in  configure~  ksh  ksh.spec  meson.build
.deps/: ksh-builtins.Po  ksh-main.Po
.github/: copilot-instructions.md
.github/workflows/: daily.yml
debian/: autoreconf.after  autoreconf.before  control  debhelper-build-stamp  files  install  ksh-dev.install  ksh-shell.install  ksh.install  kzsh-dev.install  kzsh.install  libksh-compat-dev.install  libksh-compat.install  libksh-completion.install  libksh-dbg.install  libksh-doc.install  libksh-examples.install  libksh-extra-dev.install  libksh-extra.install  libksh-locale.install  libksh-plugins-dev.install  libksh-plugins.install  libksh-static.install  libksh-tests.install  libksh-utils-dev.install  libksh-utils.install  libksh.install  not-installed  rules
debian/.debhelper/ksh/: dbgsym-build-ids
debian/.debhelper/ksh/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/kzsh/: dbgsym-build-ids
debian/.debhelper/kzsh/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/kzsh/dbgsym-root/usr/share/doc/: kzsh-dbgsym
debian/ksh-dev/DEBIAN/: control  md5sums
debian/ksh-dev/usr/share/doc/ksh-dev/: copyright
debian/ksh-shell/DEBIAN/: md5sums
debian/ksh/DEBIAN/: control
include/: alias.h  builtins.h  builtins_list.h  env.h  exec.h  history.h  ksh.h  kzsh.h  shell.h  utils.h  version.h
src/: alias.c  builtins.c  builtins.cpp  env.c  exec.c  history.c  main.c  shell.c  utils.c  utils.cpp  version.c
